--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,13 @@ openapi:
   client:
     access-key: yupi
     secret-key: abcdefgh
+
+dubbo:
+  application:
+    name: dubbo-springboot-demo-provider
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    id: nacos-registry
+    address: nacos://localhost:8848
