--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springboot-init
+    name: yuapi-backend
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,8 +13,8 @@ spring:
   # session 失效时间（分钟）
   session:
     timeout: 86400
-    store-type: none
-#  # redis 配置
+    store-type: redis
+  # redis 配置
 #  redis:
 #    port: 6379
 #    host: localhost
@@ -32,18 +32,7 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-
-openapi:
+yuapi:
   client:
     access-key: yupi
     secret-key: abcdefgh
-
-dubbo:
-  application:
-    name: dubbo-springboot-demo-provider
-  protocol:
-    name: dubbo
-    port: -1
-  registry:
-    id: nacos-registry
-    address: nacos://localhost:8848
