基本功能完成 统计分析后端功能完成

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,10 +32,12 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+# 以下配置仅供调用测试， 实际应该根据登录用户获取ak sk
 yuapi:
   client:
-    access-key: yupi
-    secret-key: abcdefgh
+    access-key: 5cd6a76ebec9c6acbd55d7ce069bf4b1
+    secret-key: c2ac8f6dce4e718e3308f62f51189c3f
 
 
 dubbo:
