--- a/openapi-client-sdk/pom.xml
+++ b/openapi-client-sdk/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.yupi</groupId>
+            <artifactId>openapi-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
