--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.yupi</groupId>
+            <artifactId>openapi-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <version>3.0.9</version>
